# chunking_evaluation

./: .gitignore  pyproject.toml  serve_embeddings.sh
chunking_evaluation/: __init__.py  cli.py  embedding.py  utils.py
chunking_evaluation/chunking/: __init__.py  cluster_semantic_chunker.py  fixed_token_chunker.py  kamradt_modified_chunker.py  llm_semantic_chunker.py  recursive_token_chunker.py
chunking_evaluation/evaluation_framework/: base_evaluation.py  general_evaluation.py  synthetic_evaluation.py
